--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ghazal Abdollahi
-logo: assets/img/4eaa4a7a-a6d2-4e2e-9fde-c9bd0788adfa.jpeg
+logo: assets/img/profile.jpeg
 description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
