--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ghazal Abdollahi
-logo: assets/img/profile.jpeg
+logo: assets/profile.jpeg
 description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
