Update title format in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Ghazal Abdollahi
+<h1 style="text-align: center;">Ghazal Abdollahi</h1>
 logo: assets/profile.jpeg
 show_downloads: false
 theme: jekyll-theme-minimal
