--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-<h1 style="text-align: center;">Ghazal Abdollahi</h1>
+title: Ghazal Abdollahi
 logo: assets/profile.jpeg
 show_downloads: false
 theme: jekyll-theme-minimal
