Add description to site configuration

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Ghazal Abdollahi
 logo: assets/profile.jpeg
+description: 📍 Salt Lake City, Utah, USA
 show_downloads: false
 theme: jekyll-theme-minimal
